Bug 1554572 - Don't apply scroll anchor adjustments if we're processing an async scroll animation. r=dholbert a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D38077